# Notification-Rake-Project

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  specs.md
.agent/: README.md
.agent/rules/: caveman.mdc  ponytail-AGENTS.md
.agent/scripts/: install.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
db/init/: 001_schema.sql  (+9 more)
docker/: Dockerfile  jupyter-entrypoint.sh
docs/: README.md  architecture.md  audit.md  deploy.md  functions.md  yahoo-setup.md
notebooks/: 01_craigslist_ingestion.ipynb  02_normalize_listings.ipynb  03_geospatial_search.ipynb  04_yahoo_phase0.ipynb  05_add_market.ipynb
scripts/: add_model.py  carsandbids.py  copart.py  hasura_track.py  health.py  ingest.py  ingest_all.py  ingest_de.py  ingest_jp.py  ingest_uk.py  ingest_us_auction.py  ingest_us_retail.py  ingest_yahoo.py  normalize.py  pipeline.py  run_scheduled_searches.py  seed.py  upsert.py
tests/: conftest.py  test_admin_console.py  test_alerts.py  test_carsandbids.py  test_config.py  test_connectors.py  test_copart.py  test_craigslist.py  test_craigslist_fetch.py  test_craigslist_rss.py  test_europe.py  test_geocode.py  test_gotify.py  test_hasura.py  test_import_rules.py  test_ingest_routes.py  test_listing.py  test_market.py  test_market_external.py  test_market_setup.py  test_meilisearch.py  test_normalize.py  test_pipeline.py  test_regions.py  test_route_pipelines.py  test_scheduled_searches.py  test_scripts.py  test_search.py  test_secrets.py  test_web.py  test_yahoo_client.py
(+134 files in other folders)
